--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.7.6",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
