--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Desafio de Backend - Clarke Energia",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx src/index.ts --watch",
+    "dev": "tsx --watch src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,12 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
-    "prisma": "^5.21.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.6",
+    "prisma": "^5.21.1",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   }
