--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.21.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "zod": "^3.23.8"
   },
