--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "lib": [
       "es2020"
     ],
-    "target": "es2020",
-    "module": "esnext",
+    "target": "ES2020",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "types": [
