set start script

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "clarke-api",
   "version": "1.0.0",
   "description": "Desafio de Backend - Clarke Energia",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "type": "commonjs",
   "scripts": {
     "dev": "tsx --watch src",
     "seed": "tsx prisma/seed.ts",
     "build": "npx tsc",
+    "start": "node dist/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
