configure Dockerfile and docker-compose.yml to run on docker

--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "clarke-api",
   "version": "1.0.0",
   "description": "Desafio de Backend - Clarke Energia",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "type": "commonjs",
   "scripts": {
     "dev": "tsx --watch src",
     "seed": "tsx prisma/seed.ts",
-    "build": "npx tsc && npm run prisma:prod && npm run seed:prod",
-    "start": "node dist/src/index.js",
-    "seed:prod": "node dist/prisma/seed.js",
+    "build": "npx tsc",
+    "start": "node dist/index.js",
     "prisma:prod": "npx prisma generate && npx prisma migrate deploy",
+    "docker:seed": "npm run prisma:prod && npm run seed",
     "test": "jest"
   },
   "keywords": [],
